# linkedin-easy-apply-bot

./: .gitignore  Makefile  pyproject.toml
docs/src/notebooks/: linkedin.ipynb
scripts/: poetry-lock.sh  selenium-run.sh
src/: config.yaml  easyapplybot.py  requirements.txt
src/linkedin_easy_apply_bot/: easyapplybot.py
src/linkedin_easy_apply_bot/backend/: config.py  main.py
src/linkedin_easy_apply_bot/backend/utils/: csv_utils.py  json_utils.py  logging_utils.py  selenium_utils.py  yaml_utils.py
src/linkedin_easy_apply_bot/frontend/: login.py
src/linkedin_easy_apply_bot/frontend/pages/: jobs.py  profile.py  questions.py
